// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Article Links Block Mid Page Article Links Block it should match a11y snapshot for list 1`] = `
@media (max-width: 14.9375rem) {
  .emotion-0 {
    margin-left: 0%;
  }
}

@media (min-width: 15rem) and (max-width: 24.9375rem) {
  .emotion-0 {
    margin-left: 0%;
  }
}

@media (min-width: 25rem) and (max-width: 37.4375rem) {
  .emotion-0 {
    margin-left: 0%;
  }
}

@media (min-width: 37.5rem) and (max-width: 62.9375rem) {
  .emotion-0 {
    margin-left: 0%;
  }
}

@media (min-width: 63rem) and (max-width: 79.9375rem) {
  .emotion-0 {
    margin-left: 20%;
  }
}

@media (min-width: 80rem) {
  .emotion-0 {
    margin-left: 40%;
  }
}

@supports (display: grid) {
  .emotion-0 {
    display: block;
    width: initial;
    margin: 0;
  }

  @media (max-width: 14.9375rem) {
    .emotion-0 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      grid-column-start: 1;
    }
  }

  @media (min-width: 15rem) and (max-width: 24.9375rem) {
    .emotion-0 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      grid-column-start: 1;
    }
  }

  @media (min-width: 25rem) and (max-width: 37.4375rem) {
    .emotion-0 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      grid-column-start: 1;
    }
  }

  @media (min-width: 37.5rem) and (max-width: 62.9375rem) {
    .emotion-0 {
      grid-template-columns: repeat(5, 1fr);
      grid-column-end: span 5;
      grid-column-start: 1;
    }
  }

  @media (min-width: 63rem) and (max-width: 79.9375rem) {
    .emotion-0 {
      grid-template-columns: repeat(5, 1fr);
      grid-column-end: span 5;
      grid-column-start: 2;
    }
  }

  @media (min-width: 80rem) {
    .emotion-0 {
      grid-template-columns: repeat(10, 1fr);
      grid-column-end: span 10;
      grid-column-start: 5;
    }
  }
}

.emotion-2 {
  font-size: 0.875rem;
  line-height: 1.125rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-style: normal;
  font-weight: 400;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #F6F6F6;
  width: 100vw;
  height: 2rem;
  color: #3F3F42;
  padding: 0 0.5rem;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-2 {
    font-size: 0.875rem;
    line-height: 1.125rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-2 {
    font-size: 0.8125rem;
    line-height: 1rem;
  }
}

@media screen and (forced-colors: active) {
  .emotion-2 {
    border: solid 0.1875rem transparent;
    border-bottom: transparent;
  }
}

@media (max-width: 14.9375rem) {
  .emotion-2 {
    -webkit-margin-start: 0.5rem;
    margin-inline-start: 0.5rem;
    margin: 0;
  }
}

@media (min-width: 25rem) {
  .emotion-2 {
    -webkit-margin-start: 1rem;
    margin-inline-start: 1rem;
    padding: 0 1rem;
    margin: 0 -0.2rem;
  }
}

.emotion-3 {
  list-style: none;
  -webkit-padding-start: 0;
  padding-inline-start: 0;
  margin: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  overflow-x: scroll;
  scroll-behavior: auto;
  -webkit-overflow-scrolling: touch;
  scrollbar-width: none;
  -ms-overflow-style: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.emotion-3::-webkit-scrollbar {
  display: none;
}

.emotion-3>li+li {
  -webkit-margin-start: 0.5rem;
  margin-inline-start: 0.5rem;
}

@media (min-width: 25rem) {
  .emotion-3>li:not(:first-of-type) {
    -webkit-margin-start: 1rem;
    margin-inline-start: 1rem;
  }
}

@media screen and (forced-colors: active) {
  .emotion-3 {
    border: solid 0.1875rem transparent;
  }
}

@media (max-width: 14.9375rem) {
  .emotion-3:first-of-type {
    -webkit-margin-start: 0.5rem;
    margin-inline-start: 0.5rem;
  }

  .emotion-3:last-of-type {
    -webkit-margin-end: 0.5rem;
    margin-inline-end: 0.5rem;
  }
}

@media (min-width: 25rem) {
  .emotion-3:first-of-type {
    -webkit-margin-start: 1rem;
    margin-inline-start: 1rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-3:first-of-type {
    -webkit-margin-start: 1rem;
    margin-inline-start: 1rem;
  }
}

@media (min-width: 63rem) {
  .emotion-3:first-of-type {
    -webkit-margin-start: 0;
    margin-inline-start: 0;
  }
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

@media screen and (forced-colors: active) {
  .emotion-4 {
    border: solid 0.1875rem transparent;
  }
}

@media (max-width: 14.9375rem) {
  .emotion-4:first-of-type {
    -webkit-margin-start: 0.5rem;
    margin-inline-start: 0.5rem;
  }

  .emotion-4:last-of-type {
    -webkit-margin-end: 0.5rem;
    margin-inline-end: 0.5rem;
  }
}

@media (min-width: 25rem) {
  .emotion-4:first-of-type {
    -webkit-margin-start: 1rem;
    margin-inline-start: 1rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-4:first-of-type {
    -webkit-margin-start: 1rem;
    margin-inline-start: 1rem;
  }
}

@media (min-width: 63rem) {
  .emotion-4:first-of-type {
    -webkit-margin-start: 0;
    margin-inline-start: 0;
  }
}

.emotion-5 {
  position: relative;
  background-color: #FFFFFF;
  padding: 1rem;
  margin-bottom: 1.5rem;
  height: auto;
  display: block;
}

@media (max-width: 14.9375rem) {
  .emotion-5 {
    width: 14.8125rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-5 {
    width: 11.125rem;
  }
}

@media (min-width: 63rem) {
  .emotion-5 {
    width: 12.6875rem;
  }
}

.emotion-6 {
  font-size: 0.9375rem;
  line-height: 1.25rem;
  font-family: ReithSerif,Helvetica,Arial,sans-serif;
  font-style: normal;
  font-weight: 700;
  display: webkit-box;
  width: 100%;
  -webkit-text-decoration: none;
  text-decoration: none;
  overflow-x: hidden;
  overflow-y: hidden;
  -webkit-line-clamp: 4;
  -webkit-box-orient: vertical;
  color: #202224;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-6 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-6 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

.emotion-6:hover,
.emotion-6:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-6:visited {
  color: #545658;
}

<div>
  <section
    aria-labelledby="Show-all-links-no-images"
    class="emotion-0 emotion-1"
    data-e2e="article-links-block"
    dir="ltr"
    role="region"
  >
    <strong
      class="emotion-2"
      data-testid="eoj-recommendations-heading"
      dir="ltr"
      id="Show-all-links-no-images"
    >
      Show all links (no images)
    </strong>
    <div
      class="emotion-3"
      dir="ltr"
    >
      <ul>
        <li
          class="emotion-4"
        >
          <div
            class="emotion-5"
          >
            <a
              class="emotion-6"
              href="https://www.bbc.co.uk/pidgin"
            >
              Show headline
            </a>
          </div>
        </li>
        <li
          class="emotion-4"
        >
          <div
            class="emotion-5"
          >
            <a
              class="emotion-6"
              href="https://www.bbc.com/mundo"
            >
              Link with Headline
            </a>
          </div>
        </li>
        <li
          class="emotion-4"
        >
          <div
            class="emotion-5"
          >
            <a
              class="emotion-6"
              href="https://www.bbc.com/brasil"
            >
              Brasil homepage
            </a>
          </div>
        </li>
      </ul>
    </div>
  </section>
</div>
`;

exports[`Article Links Block Mid Page Article Links Block it should match a11y snapshot for list with no title 1`] = `
@media (max-width: 14.9375rem) {
  .emotion-0 {
    margin-left: 0%;
  }
}

@media (min-width: 15rem) and (max-width: 24.9375rem) {
  .emotion-0 {
    margin-left: 0%;
  }
}

@media (min-width: 25rem) and (max-width: 37.4375rem) {
  .emotion-0 {
    margin-left: 0%;
  }
}

@media (min-width: 37.5rem) and (max-width: 62.9375rem) {
  .emotion-0 {
    margin-left: 0%;
  }
}

@media (min-width: 63rem) and (max-width: 79.9375rem) {
  .emotion-0 {
    margin-left: 20%;
  }
}

@media (min-width: 80rem) {
  .emotion-0 {
    margin-left: 40%;
  }
}

@supports (display: grid) {
  .emotion-0 {
    display: block;
    width: initial;
    margin: 0;
  }

  @media (max-width: 14.9375rem) {
    .emotion-0 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      grid-column-start: 1;
    }
  }

  @media (min-width: 15rem) and (max-width: 24.9375rem) {
    .emotion-0 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      grid-column-start: 1;
    }
  }

  @media (min-width: 25rem) and (max-width: 37.4375rem) {
    .emotion-0 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      grid-column-start: 1;
    }
  }

  @media (min-width: 37.5rem) and (max-width: 62.9375rem) {
    .emotion-0 {
      grid-template-columns: repeat(5, 1fr);
      grid-column-end: span 5;
      grid-column-start: 1;
    }
  }

  @media (min-width: 63rem) and (max-width: 79.9375rem) {
    .emotion-0 {
      grid-template-columns: repeat(5, 1fr);
      grid-column-end: span 5;
      grid-column-start: 2;
    }
  }

  @media (min-width: 80rem) {
    .emotion-0 {
      grid-template-columns: repeat(10, 1fr);
      grid-column-end: span 10;
      grid-column-start: 5;
    }
  }
}

.emotion-2 {
  background: #F6F6F6;
  padding: 0 0.5rem 1rem;
  margin: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  overflow-x: auto;
  width: 100vw;
  -ms-overflow-style: none;
  scrollbar-width: none;
}

.emotion-2::-webkit-scrollbar {
  display: none;
}

@media (min-width: 25rem) {
  .emotion-2 {
    padding: 0 1rem 1rem;
    margin: 0 -0.2rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-2 {
    padding: 0 1rem 1rem;
  }
}

@media screen and (forced-colors: active) {
  .emotion-2 {
    border: solid 0.1875rem transparent;
    border-top: transparent;
  }
}

.emotion-3 {
  position: relative;
  background-color: #FFFFFF;
  padding: 1rem;
  margin-bottom: 1.5rem;
  height: auto;
  display: block;
}

@media (max-width: 14.9375rem) {
  .emotion-3 {
    width: 14.8125rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-3 {
    width: 11.125rem;
  }
}

@media (min-width: 63rem) {
  .emotion-3 {
    width: 12.6875rem;
  }
}

.emotion-4 {
  font-size: 0.9375rem;
  line-height: 1.25rem;
  font-family: ReithSerif,Helvetica,Arial,sans-serif;
  font-style: normal;
  font-weight: 700;
  display: webkit-box;
  width: 100%;
  -webkit-text-decoration: none;
  text-decoration: none;
  overflow-x: hidden;
  overflow-y: hidden;
  -webkit-line-clamp: 4;
  -webkit-box-orient: vertical;
  color: #202224;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-4 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-4 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

.emotion-4:hover,
.emotion-4:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-4:visited {
  color: #545658;
}

<div>
  <section
    aria-label="Related content"
    class="emotion-0 emotion-1"
    data-e2e="article-links-block"
    dir="ltr"
    role="region"
  >
    <div
      class="emotion-2"
      dir="ltr"
    >
      <div
        class="emotion-3"
      >
        <a
          class="emotion-4"
          href="https://www.bbc.com/pidgin"
        >
          Single link
        </a>
      </div>
    </div>
  </section>
</div>
`;

exports[`Article Links Block Mid Page Article Links Block it should match a11y snapshot for single card 1`] = `
@media (max-width: 14.9375rem) {
  .emotion-0 {
    margin-left: 0%;
  }
}

@media (min-width: 15rem) and (max-width: 24.9375rem) {
  .emotion-0 {
    margin-left: 0%;
  }
}

@media (min-width: 25rem) and (max-width: 37.4375rem) {
  .emotion-0 {
    margin-left: 0%;
  }
}

@media (min-width: 37.5rem) and (max-width: 62.9375rem) {
  .emotion-0 {
    margin-left: 0%;
  }
}

@media (min-width: 63rem) and (max-width: 79.9375rem) {
  .emotion-0 {
    margin-left: 20%;
  }
}

@media (min-width: 80rem) {
  .emotion-0 {
    margin-left: 40%;
  }
}

@supports (display: grid) {
  .emotion-0 {
    display: block;
    width: initial;
    margin: 0;
  }

  @media (max-width: 14.9375rem) {
    .emotion-0 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      grid-column-start: 1;
    }
  }

  @media (min-width: 15rem) and (max-width: 24.9375rem) {
    .emotion-0 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      grid-column-start: 1;
    }
  }

  @media (min-width: 25rem) and (max-width: 37.4375rem) {
    .emotion-0 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      grid-column-start: 1;
    }
  }

  @media (min-width: 37.5rem) and (max-width: 62.9375rem) {
    .emotion-0 {
      grid-template-columns: repeat(5, 1fr);
      grid-column-end: span 5;
      grid-column-start: 1;
    }
  }

  @media (min-width: 63rem) and (max-width: 79.9375rem) {
    .emotion-0 {
      grid-template-columns: repeat(5, 1fr);
      grid-column-end: span 5;
      grid-column-start: 2;
    }
  }

  @media (min-width: 80rem) {
    .emotion-0 {
      grid-template-columns: repeat(10, 1fr);
      grid-column-end: span 10;
      grid-column-start: 5;
    }
  }
}

.emotion-2 {
  font-size: 0.875rem;
  line-height: 1.125rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-style: normal;
  font-weight: 400;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #F6F6F6;
  width: 100vw;
  height: 2rem;
  color: #3F3F42;
  padding: 0 0.5rem;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-2 {
    font-size: 0.875rem;
    line-height: 1.125rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-2 {
    font-size: 0.8125rem;
    line-height: 1rem;
  }
}

@media screen and (forced-colors: active) {
  .emotion-2 {
    border: solid 0.1875rem transparent;
    border-bottom: transparent;
  }
}

@media (max-width: 14.9375rem) {
  .emotion-2 {
    -webkit-margin-start: 0.5rem;
    margin-inline-start: 0.5rem;
    margin: 0;
  }
}

@media (min-width: 25rem) {
  .emotion-2 {
    -webkit-margin-start: 1rem;
    margin-inline-start: 1rem;
    padding: 0 1rem;
    margin: 0 -0.2rem;
  }
}

.emotion-3 {
  background: #F6F6F6;
  padding: 0 0.5rem 1rem;
  margin: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  overflow-x: auto;
  width: 100vw;
  -ms-overflow-style: none;
  scrollbar-width: none;
}

.emotion-3::-webkit-scrollbar {
  display: none;
}

@media (min-width: 25rem) {
  .emotion-3 {
    padding: 0 1rem 1rem;
    margin: 0 -0.2rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-3 {
    padding: 0 1rem 1rem;
  }
}

@media screen and (forced-colors: active) {
  .emotion-3 {
    border: solid 0.1875rem transparent;
    border-top: transparent;
  }
}

.emotion-4 {
  position: relative;
  background-color: #FFFFFF;
  padding: 1rem;
  margin-bottom: 1.5rem;
  height: auto;
  display: block;
}

@media (max-width: 14.9375rem) {
  .emotion-4 {
    width: 14.8125rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-4 {
    width: 11.125rem;
  }
}

@media (min-width: 63rem) {
  .emotion-4 {
    width: 12.6875rem;
  }
}

.emotion-5 {
  font-size: 0.9375rem;
  line-height: 1.25rem;
  font-family: ReithSerif,Helvetica,Arial,sans-serif;
  font-style: normal;
  font-weight: 700;
  display: webkit-box;
  width: 100%;
  -webkit-text-decoration: none;
  text-decoration: none;
  overflow-x: hidden;
  overflow-y: hidden;
  -webkit-line-clamp: 4;
  -webkit-box-orient: vertical;
  color: #202224;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-5 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-5 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

.emotion-5:hover,
.emotion-5:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-5:visited {
  color: #545658;
}

<div>
  <section
    aria-labelledby="Single-link"
    class="emotion-0 emotion-1"
    data-e2e="article-links-block"
    dir="ltr"
    role="region"
  >
    <strong
      class="emotion-2"
      data-testid="eoj-recommendations-heading"
      dir="ltr"
      id="Single-link"
    >
      Single link
    </strong>
    <div
      class="emotion-3"
      dir="ltr"
    >
      <div
        class="emotion-4"
      >
        <a
          class="emotion-5"
          href="https://www.bbc.com/pidgin"
        >
          Single link
        </a>
      </div>
    </div>
  </section>
</div>
`;

exports[`Article Links Block Mid Page Article Links Block it should match snapshot when in dark ui mode 1`] = `
@media (max-width: 14.9375rem) {
  .emotion-0 {
    margin-left: 0%;
  }
}

@media (min-width: 15rem) and (max-width: 24.9375rem) {
  .emotion-0 {
    margin-left: 0%;
  }
}

@media (min-width: 25rem) and (max-width: 37.4375rem) {
  .emotion-0 {
    margin-left: 0%;
  }
}

@media (min-width: 37.5rem) and (max-width: 62.9375rem) {
  .emotion-0 {
    margin-left: 0%;
  }
}

@media (min-width: 63rem) and (max-width: 79.9375rem) {
  .emotion-0 {
    margin-left: 20%;
  }
}

@media (min-width: 80rem) {
  .emotion-0 {
    margin-left: 40%;
  }
}

@supports (display: grid) {
  .emotion-0 {
    display: block;
    width: initial;
    margin: 0;
  }

  @media (max-width: 14.9375rem) {
    .emotion-0 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      grid-column-start: 1;
    }
  }

  @media (min-width: 15rem) and (max-width: 24.9375rem) {
    .emotion-0 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      grid-column-start: 1;
    }
  }

  @media (min-width: 25rem) and (max-width: 37.4375rem) {
    .emotion-0 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      grid-column-start: 1;
    }
  }

  @media (min-width: 37.5rem) and (max-width: 62.9375rem) {
    .emotion-0 {
      grid-template-columns: repeat(5, 1fr);
      grid-column-end: span 5;
      grid-column-start: 1;
    }
  }

  @media (min-width: 63rem) and (max-width: 79.9375rem) {
    .emotion-0 {
      grid-template-columns: repeat(5, 1fr);
      grid-column-end: span 5;
      grid-column-start: 2;
    }
  }

  @media (min-width: 80rem) {
    .emotion-0 {
      grid-template-columns: repeat(10, 1fr);
      grid-column-end: span 10;
      grid-column-start: 5;
    }
  }
}

.emotion-2 {
  background: #F6F6F6;
  padding: 0 0.5rem 1rem;
  margin: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  overflow-x: auto;
  width: 100vw;
  -ms-overflow-style: none;
  scrollbar-width: none;
}

.emotion-2::-webkit-scrollbar {
  display: none;
}

@media (min-width: 25rem) {
  .emotion-2 {
    padding: 0 1rem 1rem;
    margin: 0 -0.2rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-2 {
    padding: 0 1rem 1rem;
  }
}

@media screen and (forced-colors: active) {
  .emotion-2 {
    border: solid 0.1875rem transparent;
    border-top: transparent;
  }
}

.emotion-3 {
  position: relative;
  background-color: #E6E8EA;
  padding: 1rem;
  margin-bottom: 1.5rem;
  height: auto;
  display: block;
}

@media (max-width: 14.9375rem) {
  .emotion-3 {
    width: 14.8125rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-3 {
    width: 11.125rem;
  }
}

@media (min-width: 63rem) {
  .emotion-3 {
    width: 12.6875rem;
  }
}

.emotion-4 {
  font-size: 0.9375rem;
  line-height: 1.25rem;
  font-family: ReithSerif,Helvetica,Arial,sans-serif;
  font-style: normal;
  font-weight: 700;
  display: webkit-box;
  width: 100%;
  -webkit-text-decoration: none;
  text-decoration: none;
  overflow-x: hidden;
  overflow-y: hidden;
  -webkit-line-clamp: 4;
  -webkit-box-orient: vertical;
  color: #141414;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-4 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-4 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

.emotion-4:hover,
.emotion-4:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-4:visited {
  color: #545658;
}

<div>
  <section
    aria-label="Related content"
    class="emotion-0 emotion-1"
    data-e2e="article-links-block"
    dir="ltr"
    role="region"
  >
    <div
      class="emotion-2"
      dir="ltr"
    >
      <div
        class="emotion-3"
      >
        <a
          class="emotion-4"
          href="https://www.bbc.com/pidgin"
        >
          Single link
        </a>
      </div>
    </div>
  </section>
</div>
`;
